<resources>
    <string name="app_name">Music player</string>
    <string name="title_explore">Explore</string>
    <string name="title_library">Library</string>
    <string name="title_categories">Categories</string>
    <string name="info_name">Full name</string>
    <string name="info_email">Email address</string>
    <string name="info_birth">Birthdate</string>
    <string name="info_account">Account</string>
    <string name="info_phone">Phone number</string>
    <string name="info_password">Password</string>
    <string name="info_new_password">New password</string>
    <string name="info_confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="register_i_agree">I agree to the <u>Terms and Conditions</u> of the <b>My Company</b>.</string>
    <string name="media_player_play">Play</string>
    <string name="media_player_pause">Pause</string>
    <string name="media_player_repeat">Repeat</string>
    <string name="media_player_repeat_one">Repeat one</string>
    <string name="media_player_repeat_all">Repeat all</string>
    <string name="media_player_stop">Stop</string>
    <string name="media_player_next">Next</string>
    <string name="media_player_previous">Previous</string>
    <string name="media_player_shuffle">Shuffle</string>
    <string name="home_trending">Trending</string>
    <string name="home_newest">Newest</string>
    <string name="music_category_chill">Chill</string>
    <string name="music_category_youth">Youth music</string>
    <string name="music_category_vietnamese">Vietnamese</string>
    <string name="music_category_europe">European</string>
    <string name="music_category_chinese">Chinese</string>
    <string name="music_category_korean">Korean</string>
    <string name="music_category_jazz">Jazz</string>
    <string name="music_category_acoustic">Acoustic</string>
    <string name="music_category_workout">Workout</string>
    <string name="music_category_coffee">Coffee</string>
    <string name="music_category_bolero">Bolero</string>
    <string name="music_category_sad">Sad</string>
    <string name="music_category_instrumental">Instrumental</string>
    <string name="music_category_classical">Classical</string>
    <string name="music_category_children">Children\'s</string>
    <string name="music_category_film">Film score</string>
    <string name="music_category_hiphop">Hip Hop</string>
    <string name="music_category_edm">EDM</string>
    <string name="sign_in_anonymous">Go anonymous</string>
    <string name="sign_in_anonymous_dialog_title">Go anonymous</string>
    <string name="sign_in_anonymous_dialog_message">This mode doesn\'t require an account sign-in but you will be limited to accessing several music platforms. Proceed?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_ignore">Ignore</string>
    <string name="media_player_now_playing">Now playing</string>
    <string name="media_player_lyrics">Lyrics</string>
    <string name="type_artist">Artist</string>
    <string name="type_overview">Overview</string>
    <string name="type_song">Song</string>
    <string name="type_playlist">Playlist</string>
    <string name="type_category">Music category</string>
    <string name="type_video">MV</string>
    <string name="search_results">Search results</string>
    <string name="type_artists">Artists</string>
    <string name="type_songs">Songs</string>
    <string name="type_playlists">Playlists</string>
    <string name="type_videos">MVs</string>
    <string name="app_sub">Your only all-in-one music platform.</string>
    <string name="field_not_empty">This field is required</string>
    <string name="field_confirm_confirm_not_match">Confirm password doesn\'t match.</string>
    <string name="field_email_pattern_not_match">Email is malformed.</string>
    <string name="field_phone_pattern_not_match">Phone number is malformed.</string>
    <string name="field_password_pattern_not_match">Password must contains at least 8 letters or digits.</string>
    <string name="sign_in_other_providers">or sign in with</string>
    <string name="sign_in_not_found">Cannot find the account with the provided credential.</string>
    <string name="starred">Starred</string>
    <string name="loading">Please wait.</string>
    <string name="sign_up_success_title">Sign up success</string>
    <string name="sign_up_success_text">Congratulations! You have just successfully signed up an account.\nYou will be signed in automatically for the first time.\nEnjoy listening to music!</string>
    <string name="field_date_pattern_not_match">You must enter the date in the day/month/year format.</string>
    <string name="register_i_agree_not_checked">Please agree to the terms and conditions by clicking the checkbox above.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_show_all">Show all</string>
    <string name="type_playlist_by">Playlist by %s</string>
    <string name="version" translatable="false">v%s</string>
    <string name="settings">Settings</string>
    <string name="settings_updated">Settings has been saved.</string>
    <string name="sign_out">Sign out</string>
    <string name="type_all">All</string>
    <string name="music_player">Music player</string>
    <string name="pro_dialog_title">Pro content</string>
    <string name="pro_dialog_text">This content is marked as Pro. You must upgrade to Pro to continue.</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_user_info">User info</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_default">System default</string>
    <string name="setting_theme_color">Theme color</string>
    <string name="settings_save">Save</string>
    <string name="lyrics_not_found">Lyrics not found.</string>
    <string name="song_enqueue_complete">Song \'%s\' has been enqueued.</string>
    <string name="song_enqueue_failed_not_started">The media player is not started yet.\nYou must play a song first before you can enqueue it.</string>
</resources>