<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.artist.ArtistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_artist_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="@dimen/padding_vertical"
        android:paddingStart="@dimen/padding_horizontal_indented"
        android:paddingEnd="@dimen/padding_horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fragment_artist_platform"
            android:layout_width="@dimen/platform_icon_size"
            android:layout_height="@dimen/platform_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView8dp"
            tools:src="@drawable/logo_nhaccuatui" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fragment_artist_image"
            android:layout_width="@dimen/artist_avatar_size"
            android:layout_height="@dimen/artist_avatar_size"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView8dp"
            tools:src="@drawable/bg_space" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_artist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/fragment_artist_text"
            app:layout_constraintStart_toEndOf="@id/fragment_artist_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_artist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/fragment_artist_image"
            app:layout_constraintStart_toEndOf="@id/fragment_artist_image"
            app:layout_constraintTop_toBottomOf="@id/fragment_artist_title"
            tools:text="@string/type_artist" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/fragment_artist_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_overview" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_songs" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_playlists" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_videos" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragment_artist_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>